# StockPro

./: .env.db.example  .env.example  .gitignore  Dockerfile  README.md  SYSTEM_AI_DOC.md  backup.sh  deploy.sh  docker-compose.hybrid.yml  docker-compose.yml  docker-stack-db.yml  docker-stack.yml  intrucoes.md  local-test.yml  pyproject.toml  requirements.txt
apps/accounts/: backends.py  models.py  urls.py  views.py
apps/core/: context_processors.py  forms.py  models.py  services.py  urls.py  views.py
apps/inventory/: admin.py  api_views.py  apps.py  forms.py  models.py  models_v2.py  signals.py  tasks.py  tests_v2.py  urls.py  views.py
apps/partners/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/products/: admin.py  api_views.py  forms.py  models.py  serializers.py  services.py  urls.py  views.py
apps/reports/: exports.py  services.py  urls.py  views.py
apps/tenants/: admin.py  middleware.py  models.py  tasks.py  urls.py  views.py
core/: admin.py  api.py  context_processors.py  forms.py  middleware.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
core/migrations/: 0001_initial.py  (+3 more)
docs/: BACKUP.md  DATABASE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_V2.md  ROADMAP.md  STOCKPRO_IMPROVEMENTS.md
stock_control/: api_urls.py  celery.py  settings.py  urls.py
templates/: base.html
tests/: conftest.py  factories.py  test_api_auth.py  test_api_orders.py  test_api_staging.py  test_bi.py  test_imports.py  test_inventory.py  test_products.py  test_smoke.py  test_tenants.py  test_views.py
(+108 files in other folders)
